--- a/package.json
+++ b/package.json
@@ -11,8 +11,13 @@
   "dependencies": {
     "@clerk/nextjs": "^5.3.1",
     "@prisma/client": "^5.18.0",
+    "axios": "^1.7.4",
     "cloudinary": "^2.4.0",
+    "dayjs": "^1.11.13",
+    "filesize": "^10.1.4",
+    "lucide-react": "^0.429.0",
     "next": "14.2.5",
+    "next-cloudinary": "^6.10.0",
     "react": "^18",
     "react-dom": "^18"
   },
